# backend/src/dtos/post/create-post.dto.ts
@@ -6,5 +6,4 @@
 export interface CreatePostDto {
   title: string; // Title of the post
   content: string; // Main content/body of the post
-  authorId: string; // MongoDB ObjectId (as a string) of the user creating the post
 }
